# zephyr

./: MAINTAINERS.yml  west.yml
.github/workflows/: assigner.yml  bsim-tests.yaml  clang.yaml  codecov.yaml  coding_guidelines.yml  compliance.yml  errno.yml  footprint-tracking.yml  manifest.yml  ospo_compliance.yml  scripts_tests.yml  twister.yaml  twister_build.yml  twister_build_only.yml  twister_build_prep.yml  twister_on_hardware.yml  twister_test_results.yml  twister_tests_blackbox.yml  west_cmds.yml
boards/common/: openocd-adi-max32.boards.cmake
drivers/can/: CMakeLists.txt
drivers/counter/: CMakeLists.txt  Kconfig  counter_max32_rtc.c
drivers/dma/: dma_max32.c
drivers/ethernet/: CMakeLists.txt  Kconfig
drivers/flash/: flash_max32.c
drivers/hwinfo/: CMakeLists.txt  Kconfig  hwinfo_max32.c
drivers/i3c/: CMakeLists.txt  Kconfig  i3c_max32.c
drivers/rtc/: CMakeLists.txt  Kconfig  rtc_max32.c
drivers/sdhc/: CMakeLists.txt  Kconfig
drivers/serial/: uart_max32.c
drivers/spi/: spi_max32.c
include/zephyr/: sys_clock.h
modules/trusted-firmware-m/: CMakeLists.txt  Kconfig.tfm
samples/boards/adi/cgm/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/boards/adi/cgm/boards/: max32655fthr_max32655_m4.overlay  max32657evkit_max32657.overlay
samples/boards/adi/cgm/src/: database.c  main.c
samples/boards/adi/cgm/src/led_ind/: led_ind.c  led_ind.h
samples/boards/adi/cgm/src/services/: accs.c  accs.h  adi_shell.c  bas_monitor.c  ecs_monitor.c  ecs_monitor.h
submanifests/: optional.yaml
subsys/bluetooth/: Kconfig
(+156 files in other folders)
